--- a/tex/electronicsFeedback.tex
+++ b/tex/electronicsFeedback.tex
@@ -459,8 +459,8 @@ M &=10
 
 لہٰذا ہم ایسا  ایمپلیفائر تخلیق دیں گے جس کی واپسی اشارہ شامل کرنے سے پہلے افزائش درکار قیمت سے  \عددیء{M} گنا زیادہ ہو  یعنی \عددیء{A} کی قیمت \عددیء{10 \times 45=450} ہو گی۔اس میں واپسی اشارے کی شمولیت سے افزائش کو دس گنا مستحکم کیا جائے گا اور ساتھ ہی ساتھ \عددیء{A_f=45} حاصل کی جائے گی جو کہ درکار موصل نما افزائش ہے۔مساوات \حوالہ{مساوات_واپسی_کل_افزائش} کے تحت
 \begin{align*}
-45 =\frac{450}{1+W \times 450} \\
-W =\num{0.02}
+45 =\frac{450}{1+W \times 450}\approx \frac{1}{W} \\
+W \approx \frac{1}{45}=\num{0.022}
 \end{align*}
 حاصل ہوتا ہے جو  واپس کار   مستقل کی درکار قیمت ہے۔
 
