--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -203,7 +203,7 @@ h_{fe}=\frac{\Delta i_C}{\Delta i_B}=\frac{i_c}{i_b}
 \حصہ{غیر افزائندہ کردہ برقی دباو}
 	شکل  \حوالہ{شکل_غیر_افزائندہ_برقی_دباو} میں ٹرانزسٹر کے سیدھے مائل بیس-ایمٹر  جوڑ پر \عددی{V_{BE}=\SI{0.7}{\volt}} جبکہ اس کے بیس-کلکٹر جوڑ پر \عددی{V_{BC}=\SI{0.5}{\volt}} دکھائے گئے ہیں۔جیسا شکل میں دکھایا گیا ہے اس صورت میں برقی دباو \عددی{V_{CE}} کی قیمت \عددی{\SI{0.2}{\volt}} ہوتی ہے۔اگر بیس-کلکٹر جوڑ پر برقی دباو کو اس حد (یعنی \اصطلاح{چالو کردہ برقی دباو}) سے بڑھایا جائے تو  \عددی{V_{CE}} کی قیمت \عددی{\SI{0.2}{\volt}} سے کم ہو جائے گی اور ٹرانزسٹر \اصطلاح{غیر افزائندہ}\فرہنگ{غیر افزائندہ} صورت اختیار کر لے گا۔لہٰذا \اصطلاح{افزائندہ} حال ٹرانزسٹر پر برقی دباو \عددی{V_{CE}} کی قیمت \عددی{\SI{0.2}{\volt}}  سے زیادہ رہتی ہے۔\عددی{V_{CE}} کے اس قیمت کو ٹرانزسٹر کا \اصطلاح{غیر افزائندہ برقی دباو}\فرہنگ{غیر افزائندہ!برقی دباو}\فرہنگ{برقی دباو!غیر افزائندہ کردہ} \زیرنوشت{V}{CE}{غیرافزائندہ} کہتے ہیں\حاشیہب{\عددی{V_{CEsat}}} یعنی
  \begin{align}
-\زیرنوشت{V}{CE}{غیرافزائندہ} = \عددی{\SI{0.2}{\volt}}
+\زیرنوشت{V}{CE}{غیرافزائندہ} =\SI{0.2}{\volt}
 \end{align}
 %
 \begin{figure}
