--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -52,8 +52,10 @@
 %description
 \newcommand*{\جزو}[1]{\item[#1]}
 %maths commands
-\newcommand*{\عددی}[1]{\: \ensuremath{#1} \:} % in-line math & inside math mode
-\newcommand*{\عددیء}[1]{\ensuremath{#1}}
+%\newcommand*{\عددی}[1]{\: \ensuremath{#1} \:} % in-line math & inside math mode
+%\newcommand*{\عددیء}[1]{\ensuremath{#1}}
+\newcommand*{\عددی}[1]{\:\(#1\)\:} % in-line math & inside math mode
+\newcommand*{\عددیء}[1]{\(#1\)}
 \newcommand*{\سمتیہ}[1]{\ensuremath{{\bf{#1}}}}
 \newcommand*{\سمتیازیرنوشت}[2]{\ensuremath{{\boldsymbol{#1}}_{\textup{#2}}}}
 
@@ -66,6 +68,11 @@
 
 \newcommand{\سن}[1]{؁\,\ensuremath{#1}}
 \newcommand*{\قریب}[1]{\mbox{#1}}
+
+\newcommand{\kQuote}[1]{“#1”}
+\newcommand{\kquote}[1]{‘#1’}
+\newcommand{\قولء}[1]{’#1‘}
+\newcommand{\قول}[1]{”#1“}
 
 \renewcommand{\indexname}{فرہنگ}        %apparently did nothing
 %===============================
