--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -3,7 +3,7 @@
 \حصہ{پست تعددی رد عمل}
 ٹرانزسٹر باب کے حصہ \حوالہ{حصہ_ٹرانزسٹر_بدلتی_بار_خط} میں ایمپلیفائر میں کپیسٹر کا استعمال دکھایا گیا جہاں کپیسٹر کی قیمت لامحدود تصور کرتے ہوئے ادوار حل کئے گئے۔ اس باب میں کپیسٹر کے کردار پر تفصیلاً بحث کی جائے گی اور اس کی قیمت تعین کرنا سکھایا جائے گا۔
 
-اس باب میں افزائش کی حتمی قیمت \عددی{\abs{A}} کو \اصطلاح{افزائش} ہی پکارا جائے گا۔جہاں وضاحت کی ضرورت ہو وہاں اسے افزائش کی حتمی قیمت کہہ کر پکارا جائے گا۔ٹرانزسٹر ایمپلیفائر کی افزائش \عددی{A_v} ( یا \عددی{A_i} ) کے حتمی قیمت کی تعددی ردِ عمل عموماً شکل \حوالہ{شکل_عمومی_تعددی_ردعمل} کے طرز پر ہوتی ہے۔ایسا خط عموماً \اصطلاح{لوگارتھم لوگارتھم}\حاشیہب{log-log} محدد پر کھینچا جاتا ہے۔ایمپلیفائر کی زیادہ سے زیادہ افزائش \عددی{A_{vD}}  ( \عددی{A_{iD}}) \اصطلاح{درمیانی تعدد} پر رونما ہوتی ہے جبکہ بہت کم اور بہت زیادہ تعدد پر اس کی قیمت گھٹ جاتی ہے۔شکل میں \عددی{f_L} اور \عددی{f_H} دو ایسے تعدد کی وضاحت کی ہے جس پر افزائش کم ہوتے ہوتے \عددی{\frac{\abs{A_{vD}}}{\sqrt{2}}}  (یا \عددی{\frac{\abs{A_{iD}}}{\sqrt{2}}} ) ہو جاتی ہے۔ \عددی{f_L}   کو \اصطلاح{پست انقطاعی تعدد}\فرہنگ{پست انقطاعی تعدد}\فرہنگ{cut-off frequency!low}\حاشیہب{low cut-off frequency} جبکہ \عددی{f_H}  کو \اصطلاح{بلند انقطاعی تعدد}\فرہنگ{بلند انقطاعی تعدد}\فرہنگ{cut-off frequency!high}\حاشیہب{high cut-off frequency}  کہتے ہیں۔ایمپلیفائر کی تعددی رد عمل کی بات کرتے ہوئے تعدد کی تین خطے یا حدود کا عموماً ذکر ہوتا ہے جنہیں \اصطلاح{پست تعدد}\فرہنگ{پست تعدد}\حاشیہب{low frequency}، \اصطلاح{درمیانی تعدد}\فرہنگ{درمیانی تعدد}\حاشیہب{mid frequency} اور \اصطلاح{بلند تعدد}\فرہنگ{بلند تعدد}\حاشیہب{high frequency} کے \اصطلاح{حدود}\حاشیہب{limits}  کہتے ہیں۔\عددی{A_{vD}} لکھتے ہوئے زیرِ نوشت میں \عددی{D} اس حقیقت کو ظاہر کرتا ہے کہ افزائش کی یہ قیمت درمیانی\حاشیہد{لفظ درمیانی کے پہلے حرف "د" کی آواز سے \عددی{D} حاصل کی گئی ہے} تعدد پر پائی جاتی ہے۔اگرچہ \عددی{f_L} سے کم تعدد یا \عددی{f_H} سے زیادہ تعدد پر بھی ایمپلیفائر کو  استعمال کیا جا سکتا ہے البتہ ان خطوں میں ایمپلیفائر کی افزائش کم ہوتی ہے۔اسی لئے \عددی{f_L}  تا \عددی{f_H} کو  ایمپلیفائر کا \اصطلاح{دائرہ کارکردگی}\فرہنگ{دائرہ کارکردگی}\فرہنگ{band}\حاشیہب{band} \عددی{B}  کہتے ہیں  یعنی
+اس باب میں افزائش کی حتمی قیمت \عددی{\abs{A}} کو \اصطلاح{افزائش} ہی پکارا جائے گا۔جہاں وضاحت کی ضرورت ہو وہاں اسے افزائش کی حتمی قیمت کہہ کر پکارا جائے گا۔ٹرانزسٹر ایمپلیفائر کی افزائش \عددی{A_v} ( یا \عددی{A_i} ) کے حتمی قیمت کی تعددی ردِ عمل عموماً شکل \حوالہ{شکل_عمومی_تعددی_ردعمل} کے طرز پر ہوتی ہے۔ایسا خط عموماً \اصطلاح{لوگارتھم لوگارتھم}\حاشیہب{log-log} محدد پر کھینچا جاتا ہے۔ایمپلیفائر کی زیادہ سے زیادہ افزائش \عددی{A_{vD}}  ( \عددی{A_{iD}}) \اصطلاح{درمیانی تعدد} پر رونما ہوتی ہے جبکہ بہت کم اور بہت زیادہ تعدد پر اس کی قیمت گھٹ جاتی ہے۔شکل میں \عددی{f_L} اور \عددی{f_H} دو ایسے تعدد کی وضاحت کی ہے جس پر افزائش کم ہوتے ہوتے \عددی{\frac{\abs{A_{vD}}}{\sqrt{2}}}  (یا \عددی{\frac{\abs{A_{iD}}}{\sqrt{2}}} ) ہو جاتی ہے۔ \عددی{f_L}   کو \اصطلاح{پست انقطاعی تعدد}\فرہنگ{پست انقطاعی تعدد}\فرہنگ{cut-off frequency!low}\حاشیہب{low cut-off frequency} جبکہ \عددی{f_H}  کو \اصطلاح{بلند انقطاعی تعدد}\فرہنگ{بلند انقطاعی تعدد}\فرہنگ{cut-off frequency!high}\حاشیہب{high cut-off frequency}  کہتے ہیں۔ایمپلیفائر کی تعددی رد عمل کی بات کرتے ہوئے تعدد کی تین خطے یا حدود کا عموماً ذکر ہوتا ہے جنہیں \اصطلاح{پست تعدد}\فرہنگ{پست تعدد}\حاشیہب{low frequency}، \اصطلاح{درمیانی تعدد}\فرہنگ{درمیانی تعدد}\حاشیہب{mid frequency} اور \اصطلاح{بلند تعدد}\فرہنگ{بلند تعدد}\حاشیہب{high frequency} کے \اصطلاح{حدود}\حاشیہب{limits}  کہتے ہیں۔\عددی{A_{vD}} لکھتے ہوئے زیرِ نوشت میں \عددی{D} اس حقیقت کو ظاہر کرتا ہے کہ افزائش کی یہ قیمت درمیانی\حاشیہد{لفظ درمیانی کے پہلے حرف \قول{د} کی آواز سے \عددی{D} حاصل کی گئی ہے} تعدد پر پائی جاتی ہے۔اگرچہ \عددی{f_L} سے کم تعدد یا \عددی{f_H} سے زیادہ تعدد پر بھی ایمپلیفائر کو  استعمال کیا جا سکتا ہے البتہ ان خطوں میں ایمپلیفائر کی افزائش کم ہوتی ہے۔اسی لئے \عددی{f_L}  تا \عددی{f_H} کو  ایمپلیفائر کا \اصطلاح{دائرہ کارکردگی}\فرہنگ{دائرہ کارکردگی}\فرہنگ{band}\حاشیہب{band} \عددی{B}  کہتے ہیں  یعنی
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{freqResponse}
