corrections after ubuntu22.04 upgrade

--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -1507,7 +1507,7 @@ i_B&=\frac{I_S}{\beta} e^{\frac{v_{BE}}{V_T}}
 
 بالکل ڈایوڈ کی طرح \عددی{i_C} برقرار رکھتے ہوئے،  ایک ڈگری سنٹی گریڈ درجہ حرارت بڑھانے سے \عددی{v_{BE}}  کی قیمت \عددی{\SI{2}{\milli \volt}} گھٹتی ہے یعنی
 \begin{align}
-\frac{\Delta v_{BE}}{\Delta T}=\SI[per=frac,fraction=nice]{-2}{ \milli V \per \celsius}
+\frac{\Delta v_{BE}}{\Delta T}=\SI{-2}{ \milli V \per \celsius}
 \end{align}
 
 \عددی{pnp} ٹرانزسٹر کا \عددی{v_{EB}} بھی اسی شرح سے حرارت کے ساتھ گھٹتا ہے۔
@@ -3122,7 +3122,7 @@ r_e& \approx \frac{1}{g_m}=\frac{1}{40 \times 10^{-3}}=\SI{25}{\ohm}
 \end{align*}
 اور انہیں استعمال کرتے ہوئے باریک اشارات کی افزائش برقی دباو \عددی{A_v} حاصل کریں۔
 \begin{align*}
-A_v =\frac{v_o}{v_s}=-\frac{g_m r_{be} R_C}{ R_B+r_{be}}=-\frac{0.04 \times 2500 \times 7.5 \times 10^3}{180 \times 10^{3}+2500}=\SI[per=frac,fraction=nice]{-4.109}{\volt \per \volt}
+A_v =\frac{v_o}{v_s}=-\frac{g_m r_{be} R_C}{ R_B+r_{be}}=-\frac{0.04 \times 2500 \times 7.5 \times 10^3}{180 \times 10^{3}+2500}=\SI{-4.109}{\volt \per \volt}
 \end{align*}
 اس مساوات کے مطابق یہ ٹرانزسٹر ایمپلیفائر داخلی اشارہ \عددی{v_s} کے حیطے کو \عددی{\num{4.109}} گنا بڑھائے گا۔\عددی{A_v} کی قیمت منفی ہونے کا مطلب یہ ہے کہ جس لمحہ داخلی اشارہ مثبت ہو گا اس لمحہ خارجی اشارہ منفی ہو گا۔شکل میں داخلی اشارہ کو سائن نما تصور کرتے ہوئے اس حقیقت کی وضاحت کی گئی ہے۔سائن نما اشارہ کی صورت میں یہ کہا جا سکتا ہے کہ داخلی اور خارجی اشارات آپس میں \عددی{\SI{180}{\degree}} پر ہیں۔ 
 \begin{figure}
@@ -3179,10 +3179,10 @@ v_o=-7229 \times 40 \times 10^{-3} \times 0.0137 v_s=-3.96 v_s
 \end{align*}
 حاصل ہوتا ہے  یعنی
 \begin{align*}
-A_v=\frac{v_o}{v_s}=\SI[per=frac,fraction=nice]{-3.96}{\volt \per \volt}
+A_v=\frac{v_o}{v_s}=\SI{-3.96}{\volt \per \volt}
 \end{align*}
 
-مثال \حوالہ{مثال_ٹرانزسٹر_پہلا_سادہ_ترین_مثال} میں \عددی{A_v=\SI[per=frac,fraction=nice]{-4.109}{\volt \per \volt}} حاصل ہوا تھا۔یوں \عددی{r_o} کو نظر انداز کرتے ہوئے جواب میں صرف
+مثال \حوالہ{مثال_ٹرانزسٹر_پہلا_سادہ_ترین_مثال} میں \عددی{A_v=\SI{-4.109}{\volt \per \volt}} حاصل ہوا تھا۔یوں \عددی{r_o} کو نظر انداز کرتے ہوئے جواب میں صرف
 \begin{align*}
 \abs{\frac{3.96-4.109}{3.96}} \times 100=\SI{3.76}{\percent}
 \end{align*} 
@@ -3348,7 +3348,7 @@ r_i&=\frac{v_s}{i_b}=R_B+r_{be}+\left(\beta+1 \right )R_E\\
 \begin{align*}
 A_v&=\frac{v_o}{v_s}=-\frac{\beta R_C}{R_B + r_{be}+(\beta+1)R_E}\\
 &=-\frac{99 \times 75000}{150000+24750+(99+1) \times 15000}\\
-&=\SI[per=frac,fraction=nice]{-4.4335}{\volt \per \volt}
+&=\SI{-4.4335}{\volt \per \volt}
 \end{align*}
 مساوات \حوالہ{مساوات_ٹرانزسٹر_ایمپلیفائر_کی_افزائش_کلکٹر _مخارج_مزاحمتوں_کی_شرح}  کی مدد سے یہی جواب سیدھو سیدھ حاصل کیا جا سکتا ہے  جہاں
 \begin{align*}
@@ -3362,7 +3362,7 @@ A_v&=\frac{v_o}{v_s}=-\frac{\beta R_C}{R_B + r_{be}+(\beta+1)R_E}\\
 \end{align*}
 لئے جائیں گے اور یوں
 \begin{align*}
-A_v=-\alpha\left(\frac{\sum {R_C}}{\sum {R_E}} \right )=-0.99 \times \left(\frac{75000}{16747.5} \right )=\SI[per=frac,fraction=nice]{-4.4335}{\volt \per \volt}
+A_v=-\alpha\left(\frac{\sum {R_C}}{\sum {R_E}} \right )=-0.99 \times \left(\frac{75000}{16747.5} \right )=\SI{-4.4335}{\volt \per \volt}
 \end{align*}
 حاصل ہوتا ہے۔
 
@@ -3629,7 +3629,7 @@ A_v =\frac{v_o}{v_s}= \left (\frac{v_o}{i_c} \right) \times \left (\frac{i_c}{v_
 \end{align}
 مندرجہ بالا مساوات میں تینوں قوسین میں بند تناسب کے قیمتیں مساوات \حوالہ{مساوات_ٹرانزسٹر_شرح_کی_قیمتیں_الف}  میں دی گئی ہیں۔یوں اگرچہ دور حل کرنے سے قبل، مساوات \حوالہ{مساوات_ٹرانزسٹر_زنجیری_ضرب_مثال_الف}  کے دائیں جانب متغیرات (یعنی \عددیء{v_o}، \عددیء{i_c}، \عددی{v_{be}} وغیرہ) کی قیمتیں ہم نہیں جانتے لیکن مساوات \حوالہ{مساوات_ٹرانزسٹر_شرح_کی_قیمتیں_الف}  کی مدد سے ان تینوں نسبت کے قیمتیں ہم جانتے ہیں اور یوں ہم اس سے \عددی{A_v} کی قیمت حاصل کر سکتے ہیں یعنی
 \begin{align}
-A_v = -10000  \times 0.04  \times 0.4762 =\SI[per=frac,fraction=nice]{-190}{\volt \per \volt}
+A_v = -10000  \times 0.04  \times 0.4762 =\SI{-190}{\volt \per \volt}
 \end{align}
 	زنجیری ضرب لکھتے وقت مندرجہ ذیل نقاط یاد رکھیں۔
 \begin{enumerate}
@@ -3700,7 +3700,7 @@ v_{be}&=\frac{r_{\pi} v_s}{R_B +r_{\pi}+\left(\beta+1 \right )R_E}
 \begin{aligned}
 A_v&=\left(\frac{v_o}{i_c} \right ) \times \left(\frac{i_c}{v_{be}} \right ) \times \left(\frac{v_{be}}{v_s} \right ) \\
 &=(-75000) \times (0.004) \times (0.014778325)\\
-&=\SI[per=frac,fraction=nice]{-4.433}{\volt \per \volt}
+&=\SI{-4.433}{\volt \per \volt}
 \end{aligned}
 \end{gather}
 مندرجہ بالا مساوات کو یوں لکھا جا سکتا ہے۔خارجی سرے سے شروع کرتے ہم دیکھتے ہیں کہ \عددی{v_o = -i_c R_C} ہے اور یوں \عددی{v_o} کو \عددی{i_c} کی مدد سے لکھا جا سکتا ہے۔اگلے قدم پر ہم نے یہ دیکھنا ہے کہ \عددی{i_c}  کو کیسے لکھا جا سکتا ہے۔ہم دیکھتے ہیں کہ \عددی{i_c=g_m v_{be}} ہے اور یوں \عددی{i_c} کو \عددی{v_{be}}  کی مدد سے لکھا جا سکتا ہے۔تیسرے قدم پر ہم دیکھتے ہیں کہ \عددی{v_{be}}  کو \عددی{v_s} کی مدد سے لکھا جا سکتا ہے۔
@@ -3805,7 +3805,7 @@ R_{m2}&=\SI{62.5}{\kilo \ohm}
 \end{align*}
 اور یوں
 \begin{align*}
-A_v=-62500 \times 0.004064 \times 0.01605 \times 0.980019 =\SI[per=frac,fraction=nice]{-3.9952}{\volt \per \volt}
+A_v=-62500 \times 0.004064 \times 0.01605 \times 0.980019 =\SI{-3.9952}{\volt \per \volt}
 \end{align*}
 حاصل ہوتا ہے۔
 
@@ -3920,7 +3920,7 @@ A_v=\left(\frac{v_o}{i_c} \right ) \left(\frac{i_c}{v_{be}} \right ) \left(\frac
 \end{align*}
 جس سے
 \begin{align*}
-A_v=(-62500) \times (0.004064) \times (0.8833)=\SI[per=frac,fraction=nice]{224}{\volt \per \volt}
+A_v=(-62500) \times (0.004064) \times (0.8833)=\SI{224}{\volt \per \volt}
 \end{align*}
 حاصل ہوتی ہے۔گزشتہ مثال کی افزائش کے ساتھ موازنہ کرنے سے معلوم ہوتا ہے کہ  \عددی{C_E}  نسب کرنے سے افزائش بہت زیادہ بڑھ گئی ہے۔اس کو مساوات \حوالہ{مساوات_ٹرانزسٹر_ایمپلیفائر_کی_افزائش_کلکٹر _مخارج_مزاحمتوں_کی_شرح}  یعنی
 \begin{align*}
@@ -4008,7 +4008,7 @@ R_{m1}&=\SI{50.348}{\kilo \ohm}
 \begin{align*}
 A_v &=\left(\frac{v_o}{i_c} \right ) \left(\frac{i_c}{v_{be}} \right ) \left(\frac{v_{be}}{v_b} \right ) \left(\frac{v_b}{v_s} \right )\\
 &=(-62500) \times (0.004064) \times (0.711255) \times (0.9096625)\\
-&=\SI[per=frac,fraction=nice]{-164}{\volt \per \volt}
+&=\SI{-164}{\volt \per \volt}
 \end{align*}
 اسی شکل سے ایمپلیفائر کی باریک اشاراتی داخلی مزاحمت حاصل کرتے ہیں جو کہ \عددی{R_{m1}} کے برابر ہے۔یوں
 \begin{align*}
@@ -4028,7 +4028,7 @@ A_v= -\alpha \frac{\sum R_C}{\sum R_E}
 \انتہا{مثال}
 %===========
 \ابتدا{مثال}
-شکل \حوالہ{شکل_ٹرانزسٹر_ایمپلیفائر_تخلیق} میں \عددی{R_L=\SI{1}{\kilo \ohm}} اور \عددی{r_i=\SI{5}{\kilo \ohm}} جبکہ \عددی{\beta=120} ہیں۔برقی رو افزائش \عددی{A_i=\SI[per=frac,fraction=nice]{-30}{\ampere \per \ampere}} حاصل کرنے کی خاطر  درکار مزاحمت حاصل کریں۔
+شکل \حوالہ{شکل_ٹرانزسٹر_ایمپلیفائر_تخلیق} میں \عددی{R_L=\SI{1}{\kilo \ohm}} اور \عددی{r_i=\SI{5}{\kilo \ohm}} جبکہ \عددی{\beta=120} ہیں۔برقی رو افزائش \عددی{A_i=\SI{-30}{\ampere \per \ampere}} حاصل کرنے کی خاطر  درکار مزاحمت حاصل کریں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorDesignExample}
@@ -4100,7 +4100,7 @@ r_{be} =\frac{\beta V_T}{I_{CQ}} \ll R_B \ll \left(\beta+1\right) R_E
 شکل \حوالہ{شکل_سادہ_ایمپلیفائر_بار_کے_اثرات_الف} میں ایک ایمپلیفائر اور اس کا مساوی باریک اشاراتی دور دکھائے گئے جہاں تمام کپیسٹروں کی قیمت لامحدود ہے۔اس کی افزائش
 \begin{align*}
 A_{v1}=\frac{v_L}{v_i}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{be}} \times \frac{v_{be}}{v_i}\\
-&=-400 \times 0.39 \times 1=\SI[per=frac,fraction=nice]{-156}{\volt \per \volt}
+&=-400 \times 0.39 \times 1=\SI{-156}{\volt \per \volt}
 \end{align*}
 جبکہ داخلی مزاحمت \عددی{R_i'}
 \begin{align*}
@@ -4123,14 +4123,14 @@ R_i=\SI{88.76}{\ohm}
 \begin{gather}
 \begin{aligned}\label{مساوات_ٹرانزسٹر_بار_کا_افزائش_پر_اثر_الف}
 A_{v2}=\frac{v_L}{v_i}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{be}} \times \frac{v_{be}}{v_i}\\
-&=-\left(\frac{400 \times 200}{400+200} \right) \times 0.39 \times 1=\SI[per=frac,fraction=nice]{-52}{\volt \per \volt}
+&=-\left(\frac{400 \times 200}{400+200} \right) \times 0.39 \times 1=\SI{-52}{\volt \per \volt}
 \end{aligned}
 \end{gather}
 حاصل ہوتی ہے جبکہ اگر \عددی{R_L=\SI{88.76}{\ohm}} ہو تب
 \begin{gather}
 \begin{aligned}\label{مساوات_ٹرانزسٹر_بار_کا_افزائش_پر_اثر_ب}
 A_{v3}=\frac{v_L}{v_i}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{be}} \times \frac{v_{be}}{v_i}\\
-&=-\left(\frac{400 \times 88.76}{400+88.76} \right) \times 0.39 \times 1=\SI[per=frac,fraction=nice]{-28}{\volt \per \volt}
+&=-\left(\frac{400 \times 88.76}{400+88.76} \right) \times 0.39 \times 1=\SI{-28}{\volt \per \volt}
 \end{aligned}
 \end{gather}
 حاصل ہوتا ہے۔
@@ -4147,7 +4147,7 @@ A_{v4}=\frac{v_L}{v_i}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{be}} \times \frac{v
 &=-\left(\frac{400 \times 88.76}{400+88.76} \right) \times 0.39 \times \left(\frac{R_i}{r_i+R_i} \right)\\
 &=-\left(\frac{400 \times 88.76}{400+88.76} \right) \times 0.39 \times \left(\frac{88.76}{100+88.76} \right)\\
 &=-28 \times 0.47\\
-&=\SI[per=frac,fraction=nice]{-13}{\volt \per \volt}
+&=\SI{-13}{\volt \per \volt}
 \end{align*}
 %
 \begin{figure}
@@ -4203,19 +4203,19 @@ v_{be}&=\left(\frac{R_i}{r_i+R_i} \right) v_i\\
 
 اس شکل میں
 \begin{align*}
-\frac{v_L}{v_{o1}}=\frac{v_L}{v_{be2}}=A_{v2}=-0.39 \times 133.33=\SI[per=frac,fraction=nice]{-52}{\volt \per \volt}\\
-\frac{v_{o1}}{v_{be1}}=\frac{v_{be2}}{v_{be1}}=A_{v1}=-0.39 \times 72.6=\SI[per=frac,fraction=nice]{-28}{\volt \per \volt}\\
-\frac{v_{be1}}{v_i}=A_{v0}=\frac{88.7}{100+88.7}=\SI[per=frac,fraction=nice]{0.47}{\volt \per \volt}
+\frac{v_L}{v_{o1}}=\frac{v_L}{v_{be2}}=A_{v2}=-0.39 \times 133.33=\SI{-52}{\volt \per \volt}\\
+\frac{v_{o1}}{v_{be1}}=\frac{v_{be2}}{v_{be1}}=A_{v1}=-0.39 \times 72.6=\SI{-28}{\volt \per \volt}\\
+\frac{v_{be1}}{v_i}=A_{v0}=\frac{88.7}{100+88.7}=\SI{0.47}{\volt \per \volt}
 \end{align*}
 لکھا جا سکتا ہے۔یوں زنجیری ایمپلیفائر کی کل افزائش زنجیری ضرب سے
 \begin{align*}
 A_v&=\frac{v_L}{v_i}=\frac{v_L}{v_{o1}} \times \frac{v_{o1}}{v_{be1}} \times \frac{v_{be1}}{v_i}\\
 &=A_{v0} A_{v1} A_{v2}\\
-&=0.47 \times \left(-28 \right) \times \left(-52 \right)=\SI[per=frac,fraction=nice]{684}{\volt \per \volt}
+&=0.47 \times \left(-28 \right) \times \left(-52 \right)=\SI{684}{\volt \per \volt}
 \end{align*}
 حاصل ہوتی ہے۔
 
-یہاں رک کر دوبارہ غور کریں۔شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر} سے  سیدھا شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر_سادہ_مساوی_الف} حاصل کرتے ہوئے کل افزائش حاصل کی جا سکتی ہے۔حقیقت میں اس قدم کی بھی کوئی ضرورت نہیں۔جیسا کہ شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر} پر ہی دکھایا گیا ہے، آپ اسی شکل پر ہر کڑی کی افزائش \عددی{-\tfrac{\sum R_C}{\sum R_E}} حاصل کر سکتے ہیں۔کیلکیولیٹر\حاشیہب{calculator} کی مدد سے شکل کو دیکھتے ہوئے \عددی{\sum R_C} اور \عددی{\sum R_E} حاصل کرتے ہوئے افزائش حاصل کی جا سکتی ہے۔یوں مثلاً دوسری کڑی میں \عددی{\sum R_C=\SI{133}{\ohm}} جبکہ \عددی{\sum R_E=r_e=\SI{2.56}{\ohm}} سے \عددی{A_{v2}=\SI[per=frac,fraction=nice]{-52}{\volt \per \volt}} حاصل ہوتا ہے۔
+یہاں رک کر دوبارہ غور کریں۔شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر} سے  سیدھا شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر_سادہ_مساوی_الف} حاصل کرتے ہوئے کل افزائش حاصل کی جا سکتی ہے۔حقیقت میں اس قدم کی بھی کوئی ضرورت نہیں۔جیسا کہ شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر} پر ہی دکھایا گیا ہے، آپ اسی شکل پر ہر کڑی کی افزائش \عددی{-\tfrac{\sum R_C}{\sum R_E}} حاصل کر سکتے ہیں۔کیلکیولیٹر\حاشیہب{calculator} کی مدد سے شکل کو دیکھتے ہوئے \عددی{\sum R_C} اور \عددی{\sum R_E} حاصل کرتے ہوئے افزائش حاصل کی جا سکتی ہے۔یوں مثلاً دوسری کڑی میں \عددی{\sum R_C=\SI{133}{\ohm}} جبکہ \عددی{\sum R_E=r_e=\SI{2.56}{\ohm}} سے \عددی{A_{v2}=\SI{-52}{\volt \per \volt}} حاصل ہوتا ہے۔
 
 شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر} میں پہلے کڑی اور دوسری کڑی کے ایمپلیفائروں کے داخلی مزاحمت \عددی{R_{i1}} اور \عددی{R_{i2}} کی وضاحت کی گئی ہے۔شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر_مساوی_الف} میں ان کی قیمتیں
 \begin{align*}
@@ -4252,14 +4252,14 @@ R_{i2}=\SI{88.7}{\ohm}
 
 حل: شکل \حوالہ{شکل_دو_کڑی_زنجیری_ایمپلیفائر_بغیر_گزر_کپیسٹر_کا_مساوی} میں اس کا مساوی دور دکھایا گیا ہے جہاں سے \عددی{R_{i1}=R_{i2}=\SI{4.56}{\kilo \ohm}} حاصل ہوتے ہیں۔اسی طرح ان دونوں اشکال میں سے کسی بھی سے مندرجہ ذیل لکھا جا سکتا ہے۔
 \begin{align*}
-A_{v0}&=\frac{v_{b1}}{v_i}=\frac{4560}{4560+1000}=\SI[per=frac,fraction=nice]{0.82}{\volt \per \volt}\\
-A_{v1}&=\frac{v_{o1}}{v_{b1}}= -0.04 \times \frac{4000 \times 4560}{4000+4560} \times \frac{2500}{2500+50500}=\SI[per=frac,fraction=nice]{-4}{\volt \per \volt}\\
-A_{v2}&=\frac{v_L}{v_{b2}}=-0.04 \times \frac{4000 \times 8000}{4000+8000} \times \frac{2500}{2500+50500}=\SI[per=frac,fraction=nice]{-5}{\volt \per \volt}
+A_{v0}&=\frac{v_{b1}}{v_i}=\frac{4560}{4560+1000}=\SI{0.82}{\volt \per \volt}\\
+A_{v1}&=\frac{v_{o1}}{v_{b1}}= -0.04 \times \frac{4000 \times 4560}{4000+4560} \times \frac{2500}{2500+50500}=\SI{-4}{\volt \per \volt}\\
+A_{v2}&=\frac{v_L}{v_{b2}}=-0.04 \times \frac{4000 \times 8000}{4000+8000} \times \frac{2500}{2500+50500}=\SI{-5}{\volt \per \volt}
 \end{align*}
 لہٰذا
 \begin{align*}
 A_{v}=\frac{v_L}{v_i}&=\frac{v_L}{v_{b2}} \frac{v_{o1}}{v_{b1}} \frac{v_{b1}}{v_i}\\
-&=\left(-5 \right) \left(-4 \right) \left(0.82 \right)=\SI[per=frac,fraction=nice]{16.4}{\volt \per \volt}
+&=\left(-5 \right) \left(-4 \right) \left(0.82 \right)=\SI{16.4}{\volt \per \volt}
 \end{align*}
 \انتہا{مثال}
 %===============
@@ -4416,7 +4416,7 @@ r_{be}=\SI{1}{\kilo \ohm}, \hspace{5mm} \beta=99
 A_v=\frac{v_L}{v_s}&=\frac{v_L}{v_B} \times \frac{v_B}{v_s}\\
 &=\frac{R_E'}{r_{be}+R_E'}\\
 &=\frac{\left(99+1 \right) \times 1000}{1000+\left(99+1 \right)  \times 1000}\\
-&=\SI[per=frac,fraction=nice]{0.99}{\volt \per \volt} \approx \SI[per=frac,fraction=nice]{1}{\volt \per \volt} 
+&=\SI{0.99}{\volt \per \volt} \approx \SI{1}{\volt \per \volt} 
 \end{align*}
 جبکہ
 \begin{align*}
@@ -4451,7 +4451,7 @@ A_v=\frac{v_L}{v_s}&=\frac{v_L}{v_B} \times \frac{v_B}{v_s}\\
 &=\frac{R_E'}{r_{be}+R_E'} \times \frac{R_1 \mathbin{\|} R_2 \mathbin{\|} \left(r_i+R_E' \right)}{r_i+[R_1 \mathbin{\|} R_2 \mathbin{\|} \left(r_{be}+R_E' \right)]}\\
 &=\frac{100000}{1000+100000} \times \frac{8367}{5000+8367}\\
 &=0.99 \times 0.6259\\
-&=\SI[per =frac,fraction=nice]{0.619}{\volt \per \volt}
+&=\SI{0.619}{\volt \per \volt}
 \end{align*}
 \انتہا{مثال}
 %==========
@@ -4926,7 +4926,7 @@ i_e=\left(\beta+1 \right) i_b\\
 \begin{align*}
 V_{BE}=\SI{0.7}{\volt}\\
 V_{CE \text{غیرافزائندہ}}=\SI{0.2}{\volt}\\
-\frac{\Delta v_{BE}}{\Delta T}=\SI[per=frac,fraction=nice]{-2}{ \milli V \per \celsius}
+\frac{\Delta v_{BE}}{\Delta T}=\SI{-2}{ \milli V \per \celsius}
 \end{align*}
 %
 \begin{align*}
