--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -1670,7 +1670,7 @@ A_d=\frac{v_o}{v_d}=g_m R_D
 حاصل ہوتی ہے۔
 %=============================
 \ابتدا{مثال}\شناخت{مثال_تفرقی_درکار_زیادہ_سے_زیادہ_داخلی_برقی_دباو}
-شکل \حوالہ{شکل_تفرقی_ماسفیٹ_بنیادی_تفرقی_جوڑا} میں دکھائے گئے ماسفیٹ کے تفرقی جوڑے میں \عددی{2I=\SI{200}{\micro \ampere}} ہے جبکہ \عددی{k_n=\SI[per=frac,fraction=nice]{0.1}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1.2}{\volt}} ہیں۔\عددیء{V_{GS}} اور \عددیء{g_m} حاصل کرتے ہوئے \عددی{v_d} کی وہ قیمت حاصل کریں جس پر تمام کی تمام برقی رو ایک ماسفیٹ کو منتقل ہو جاتی ہے۔
+شکل \حوالہ{شکل_تفرقی_ماسفیٹ_بنیادی_تفرقی_جوڑا} میں دکھائے گئے ماسفیٹ کے تفرقی جوڑے میں \عددی{2I=\SI{200}{\micro \ampere}} ہے جبکہ \عددی{k_n=\SI{0.1}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1.2}{\volt}} ہیں۔\عددیء{V_{GS}} اور \عددیء{g_m} حاصل کرتے ہوئے \عددی{v_d} کی وہ قیمت حاصل کریں جس پر تمام کی تمام برقی رو ایک ماسفیٹ کو منتقل ہو جاتی ہے۔
 
 حل:\عددی{v_d=0} پر دونوں ماسفیٹ اپنے نقطہ کارکردگی پر ہوتے ہیں اور دونوں میں برابر \عددی{\SI{100}{\micro \ampere}} برقی رو پایا جاتا ہے۔افزائندہ ماسفیٹ کی مساوات سے یوں
 \begin{align*}
@@ -1698,7 +1698,7 @@ A_d=0.1414 \times 10^{-3} \times 50000=\SI{7.07}{\volt \per \volt}
 \انتہا{مثال}
 %===========
 \ابتدا{مثال}\شناخت{مثال_تفرقی_مخارج_برقی_دباو_کا_حصول}
-شکل \حوالہ{شکل_تفرقی_ماسفیٹ_بنیادی_تفرقی_جوڑا} میں دکھائے گئے ماسفیٹ کے تفرقی جوڑے میں \عددی{2I=\SI{200}{\micro \ampere}} ہے جبکہ \عددی{k_n=\SI[per=frac,fraction=nice]{0.1}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1.2}{\volt}} ہیں۔\عددی{Q_2} کو برقی زمین پر رکھتے ہوئے  \عددیء{v_{GS1}}، \عددیء{v_{GS2}}، \عددیء{v_{S}} اور \عددی{v_{G1}} کی قیمتیں مندرجہ ذیل صورتوں میں حاصل کریں۔
+شکل \حوالہ{شکل_تفرقی_ماسفیٹ_بنیادی_تفرقی_جوڑا} میں دکھائے گئے ماسفیٹ کے تفرقی جوڑے میں \عددی{2I=\SI{200}{\micro \ampere}} ہے جبکہ \عددی{k_n=\SI{0.1}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1.2}{\volt}} ہیں۔\عددی{Q_2} کو برقی زمین پر رکھتے ہوئے  \عددیء{v_{GS1}}، \عددیء{v_{GS2}}، \عددیء{v_{S}} اور \عددی{v_{G1}} کی قیمتیں مندرجہ ذیل صورتوں میں حاصل کریں۔
 \begin{enumerate}
 \item
 \عددی{i_{DS1}=\SI{100}{\micro \ampere}} ہے۔
