--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -156,7 +156,7 @@ v_0 &=A_d \times v_d \\
 \toprule
 $R_i$ &  $\SI{e{12}}{\ohm}$ \\
 $R_o$ & $\SI{100}{\ohm}$\\
-$A_d$  & $\SI[per=frac,fraction=nice]{100000}{\volt \per \volt}$ \\
+$A_d$  & $\SI{100000}{\volt \per \volt}$ \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -201,7 +201,7 @@ R_i \to \infty
 
 \جزوحصہ{تفرقی افزائش کو لامحدود تصور کیا جاتا ہے}
 
-جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں تفرقی افزائش برقی دباو کی مثال \عددی{A_d =\SI[per=frac,fraction=nice]{100000}{\volt \per \volt}} دی گئی ہے جسے لامحدود تصور کیا جا سکتا ہے یعنی
+جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں تفرقی افزائش برقی دباو کی مثال \عددی{A_d =\SI{100000}{\volt \per \volt}} دی گئی ہے جسے لامحدود تصور کیا جا سکتا ہے یعنی
 \begin{align}
 A_D \to \infty
 \end{align}
