--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -15,7 +15,7 @@
 \usepackage[stable,bottom]{footmisc}						%for footnotes in the headings
 
 \usepackage{siunitx} 			%SI units that meets iso-31 regulations such as \micro, \degree \SI{3}{\celsius}
-\sisetup{per=frac,fraction=nice}    %setup for siunitx
+%\sisetup{per=frac,fraction=nice}    %setup for siunitx
 
 \usepackage{steinmetz}		%\phase to show angle of phasors
 \usepackage[version=3]{mhchem}     %chemical symbols such as \ce{H2O}
