--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -43,16 +43,16 @@
 \setmainlanguage{urdu}
 \setotherlanguage{english}
 %\newfontfamily\urdufont[Scale=1.0]{Jameel Noori Nastaleeq}             %defining urdufont attaches it to mainlanguage{urdu} defined above
-\setmainfont[Scale=1.0]{Jameel Noori Nastaleeq}             %defining urdufont attaches it to mainlanguage{urdu} defined above
+\setmainfont[Script=Arabic,Scale=1.0]{Jameel Noori Nastaleeq}       
 
-\setmonofont{DejaVu Sans Mono}                                                              %had to add this and the next line to get going after ubuntu upgrade
-\let\urdufontt\ttfamily                                                                                  %had to add this and the above line to get going after ubuntu upgrade
+\newfontfamily\urdufontsf[Script=Arabic,Scale=1.0]{Jameel Noori Nastaleeq}
+\newfontfamily\urdufonttt[Script=Arabic,Scale=1.0]{Jameel Noori Nastaleeq}
+
 \newfontfamily\urduTechTermsfont[Scale=1.0,Script=Arabic]{AA Sameer Sagar Nastaleeq Bold}
 %\setlength{\parskip}{5mm plus 4mm minus 3mm}
 
-%\newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
 
-%\newfontfamily\AcaciasHand{AcaciasHand}
+%%\newfontfamily\AcaciasHand{AcaciasHand}
 
 \setcounter{secnumdepth}{3} 
 
