--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -40,7 +40,7 @@
 
 %references and labels
 \newcommand*{\شناخت}[1]{\label{#1}}
-\newcommand*{\حوالہ}[1]{\ref{#1}}
+\newcommand*{\حوالہ}[1]{\textenglish{\ref{#1}}}
 \newcommand*{\حوالہصفحہ}[1]{\pageref{#1}}
 
 %counters
@@ -78,13 +78,13 @@
 %===============================
 
 
-%numbering scheme
-\renewcommand*{\thefigure}{\thechapter.\arabic{figure}}
-\renewcommand*{\thetable}{\thechapter.\arabic{table}}
-\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
-\renewcommand*{\thesection}{\thechapter.\arabic{section}}
-\renewcommand*{\thesubsection}{\thechapter.\arabic{section}.\arabic{subsection}}
-\renewcommand*{\thesubsubsection}{\thechapter.\arabic{section}.\arabic{subsection}.\arabic{subsubsection}}
+%%numbering scheme
+%\renewcommand*{\thefigure}{\thechapter.\arabic{figure}}
+%\renewcommand*{\thetable}{\thechapter.\arabic{table}}
+%\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
+%\renewcommand*{\thesection}{\thechapter.\arabic{section}}
+%\renewcommand*{\thesubsection}{\thechapter.\arabic{section}.\arabic{subsection}}
+%\renewcommand*{\thesubsubsection}{\thechapter.\arabic{section}.\arabic{subsection}.\arabic{subsubsection}}
 
 %================
 %my environments
