--- a/electronicsLatex.tex
+++ b/electronicsLatex.tex
@@ -32,20 +32,12 @@ math-micro=\textup{µ},text-micro=µ,math-ohm  =\upOmega,text-degree=°,
 خالد خان یوسفزئی\\
 \\
 {\small {جامعہ کامسیٹ، اسلام آباد}}\\
-\texttt{khalidyousafzai@comsats.edu.pk}
+\texttt{khalidyousafzai@hotmail.com}
 }
 
 \title{مماثل برقیات}
 %\date{}                           %if absent gives date in arabic which is a rubbish
 
-%included the following to correct the RTL issues with equation numbering after upgradation to ubuntu 18.04
-%might break bidi package as said on the internet
-\makeatletter
-\def\maketag@@@#1{\hbox{\m@th\normalfont\RTL{{\beginR #1\endR}}}}
-\def\tagform@#1{\maketag@@@{(\ignorespaces{\beginR#1\endR}\unskip)}}
-\makeatother
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\makeindex
 
